2011-03-25  vadim  <vadim@netcitadel.com>

	* parsers/pix.g (tcp_udp_rule_extended): see #2273 Improvements in
	the parser for PIX/ASA configs to make it recognize object-group
	and named object names used to define source port, destination
	address or destination port in "access-list ... tcp|udp" rules,
	including ambiguous situation when an object-group appears after
	source address specification because this group can define either
	source port or destination address.

2011-03-24  vadim  <vadim@netcitadel.com>

	* ASA8ObjectGroup.cpp: see #2263 looks like "object-group service"
	that includes named objects defined as "service-object" can not be
	used in access-list commands and therefore is useless. Unless I
	misunderstood and there is a way to use it, I should not generate
	ASA configuration like this:

        object-group service id5102X14531.srv.tcp.0 tcp
          service-object object http.0
          service-object object https.0

	Object-group with "tcp" or "udp" type-suffix in the end does not
	allow "service-object" statements at all, so this configuration
	is incorrect anyway. However even without "tcp" in the end to
	make "service-object" references acceptable, the group can be built
	but can not be used in access-list statements.

	Instead, the group should use port-object statements:

	object-group service id5102X14531.srv.tcp.0 tcp
	  port-object eq 80
	  port-object eq 443

	* IOSImporter.cpp (createTCPUDPServicePair): see #2267 added
	support for import of object-group and service-object statements
	of type "tcp-udp" (these get imported as service group object with
	two tcp and udp service objects).

	* getServByName.cpp (getPortByName): see #2268 updated list of
	named tcp and udp ports recognized by the importer for Cisco ASA.
	It is still unclear what port does the name "cifs" correspond to.

2011-03-23  vadim  <vadim@netcitadel.com>

	* addressObjectMaker.cpp (createObject): see #1548 Improved